// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`initPackageJson() returns data for package.json 1`] = `
"{
  \\"name\\": \\"@coremedia/test-theme\\",
  \\"version\\": \\"1.0.0\\",
  \\"private\\": true,
  \\"scripts\\": {
    \\"build\\": \\"webpack\\",
    \\"start\\": \\"cm monitor\\",
    \\"prettier\\": \\"prettier \\\\\\"**/*\\\\\\" --write\\",
    \\"theme-importer\\": \\"cm theme-importer\\"
  },
  \\"__comment__dependencies__\\": {
    \\"__comment__\\": \\"List of all brick dependencies. In order to add a dependency, move the entry to 'dependencies'\\",
    \\"some-brick\\": \\"^1.0.0\\",
    \\"some-other-brick\\": \\"^1.0.0\\",
    \\"@coremedia/js-logger\\": \\"^1.0.0\\",
    \\"@coremedia/sass-utils\\": \\"^1.0.0\\",
    \\"jquery\\": \\"3.2.1\\"
  },
  \\"dependencies\\": {
    \\"@coremedia/cm-cli\\": \\"^2.0.0\\",
    \\"@coremedia/theme-utils\\": \\"^3.0.0\\",
    \\"webpack\\": \\"3.10.0\\"
  },
  \\"devDependencies\\": {
    \\"prettier\\": \\"1.11.1\\"
  },
  \\"main\\": \\"src/js/index.js\\",
  \\"coremedia\\": {
    \\"type\\": \\"theme\\",
    \\"name\\": \\"test\\"
  },
  \\"browserslist\\": [
    \\"last 1 Chrome version\\",
    \\"last 1 Firefox version\\",
    \\"last 1 Edge version\\",
    \\"Explorer >= 11\\"
  ]
}"
`;

exports[`initPreviewJs() returns data for preview.js 1`] = `
"/*! Theme test: Preview JS */
// add preview specific code here...
"
`;

exports[`initPreviewSass() returns data for preview.sass 1`] = `
"/*! Theme test: Preview Styles */
// ### VARIABLES ###

// Own variables (need to be loaded first, so default values can be overridden)
// @see http://sass-lang.com/documentation/file.SASS_REFERENCE.html#Variable_Defaults___default

//@import \\"variables/...\\";

// Dependency variables

@import \\"?smart-import-variables\\";

// ... add third-party dependencies here (after smart-import-variables)

// ### PARTIALS ###

// Dependency partials

// ... add third-party dependencies here (before smart-import-partials)

@import \\"?smart-import-partials\\";

// Own partials

//@import \\"partials/...\\";
"
`;

exports[`initThemeIndexJs() returns data for index.js 1`] = `
"/*! Theme test */
import \\"./test.js\\";
"
`;

exports[`initThemeJs() returns data for <themeName>.js 1`] = `
"//import $ from \\"jquery\\";
//import logger from \\"@coremedia/js-logger\\";
// --- JQUERY DOCUMENT READY -------------------------------------------------------------------------------------------
//$(function () {
//  logger.log(\\"Theme test is used.\\");
//});
"
`;

exports[`initThemePrettierignore() returns data for .prettierignore 1`] = `
"/*
/*
!/src
/src/*
!/src/js
"
`;

exports[`initThemeSass() returns data for <themeName>.sass 1`] = `
"/*! Theme test */
// ### VARIABLES ###

// Own variables (need to be loaded first, so default values can be overridden)
// @see http://sass-lang.com/documentation/file.SASS_REFERENCE.html#Variable_Defaults___default

//@import \\"variables/...\\";

// Dependency variables

@import \\"?smart-import-variables\\";

// ... add third-party dependencies here (after smart-import-variables)

// ### PARTIALS ###

// Dependency partials

// ... add third-party dependencies here (before smart-import-partials)

@import \\"?smart-import-partials\\";

// Own partials

//@import \\"partials/...\\";
"
`;

exports[`initThemedescriptorXml() returns data for theme descriptor 1`] = `
"<?xml version=\\"1.0\\" encoding=\\"UTF-8\\"?>
<themeDefinition modelVersion=\\"1\\">
<name>test</name>
<!-- <description>a short description</description> -->
<!-- <thumbnail>img/theme-preview.jpg</thumbnail> -->
<javaScriptLibraries>
  <!-- add thirdparty js files that are not bundled via webpack here -->
  <!-- <javaScript>vendor/some-vendor-script.js</javaScript> -->
</javaScriptLibraries>
<javaScripts>
  <!-- add own js files that are not bundled via webpack here -->
  <!-- <javaScript>js/your-code.js</javaScript> -->
  <javaScript disableCompress=\\"true\\">js/test.js</javaScript>
</javaScripts>
<styleSheets>
  <css disableCompress=\\"true\\">css/test.css</css>
</styleSheets>
<templateSets>
  <templateSet>templates/test-templates.jar</templateSet>
  <!-- aggregated templates of all bricks, activate this if you are using bricks -->
  <!-- <templateSet>templates/bricks-templates.jar</templateSet> -->
</templateSets>
<resourceBundles>
  <!-- add theme resource bundles here -->
  <resourceBundle>l10n/Test_en.properties</resourceBundle>
  <!-- merged resource bundles of all bricks, activate this if you are using bricks -->
  <!-- <resourceBundle>l10n/Bricks_en.properties</resourceBundle> -->
</resourceBundles>
</themeDefinition>
"
`;

exports[`initWebpackConfigJs() returns data for webpack.config.js 1`] = `
"const webpackTheme = require(\\"@coremedia/theme-utils/webpack.config.js\\");
module.exports = webpackTheme;
"
`;
